refactor: implement comprehensive code deduplication and modernization
This major refactoring addresses code quality, maintainability, and reduces
duplication across the entire codebase through 5 strategic improvements:

## 🎯 Major Refactoring Components

### 1. Centralized Validation Framework
- Add internal/common/validation.go with reusable validation rules
- Replace ~400+ lines of duplicate validation code across project
- Apply to config.go, llm.go, and openai.go with consistent error messages
- Support for Required(), Positive(), Range(), OneOf() validation patterns

### 2. Configuration Builder Pattern
- Add internal/common/config_builder.go with fluent interface
- Type-safe configuration construction with integrated validation
- Applied to OpenAI provider creation for improved ergonomics

### 3. Test Helper Framework
- Add internal/testutil/helpers.go with generic test utilities
- Convert validation tests to use RunValidationTests() helper
- Reduce table-driven test boilerplate by ~70%
- Add robust error handling for edge cases

### 4. Agent Factory Registry System
- Add internal/agents/registry.go for plugin-style agent creation
- Refactor AgentManager to use registry instead of factory pattern
- Enable extensible architecture for new agent types
- Remove ~30 lines of duplicate factory code

### 5. Error Handling & Common Utilities
- Add internal/common/result.go with retry logic and timing utilities
- Add CollectMapValues() for common map-to-slice patterns
- Apply to AgentManager and MessageRouter to eliminate duplication

## 🛠 Technical Improvements

- Fix golangci-lint issues and add comprehensive .golangci.yml config
- Address OpenAI library API compatibility (temporary stub implementation)
- Update go.mod/go.sum with new openai-go dependency
- Fix import aliases, variable declarations, and typos throughout

## 🧹 Repository Cleanup

- Add comprehensive .gitignore patterns for build artifacts and coverage files
- Remove build artifacts: capn binary, cove

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 # Coverage files
 *.out
 *_coverage.out
+*_coverage_new.out
 coverage.html
 
 # Build artifacts
 capn
 dist/
 build/
+
+# Demo and example executables
+agent_communication_demo
 
 # Temporary files
 *.tmp
